--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-MONGO_URI=mongodb://localhost:27017/AbdullahDb
+MONGO_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/test?retryWrites=true&w=majority
+
