--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/test?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://<mabdullah8650615>:<Zm8Uw48sVej36qWj>@cluster0.mongodb.net/test?retryWrites=true&w=majority
 
