--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,7 +6,10 @@
       "use": "@vercel/node"
     }
   ],
-  "env": {
-    "MY_ENV_VAR": "value"
-  }
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "index.js"
+    }
+  ]
 }
